<resources>
    <string name="app_name">Data Lapak</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_email">Forgot email?</string>
    <string name="learn_more">Learn more</string>
    <string name="with_your_apps_account">with your Apps Account. </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="start_transaction">Start Transaction</string>
    <string name="your_account">Your Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="search">Search</string>

    <string name="pasar">Market</string>
    <string name="lokasi_pasar">Market Location</string>
    <string name="phone">Phone</string>
    <string name="deskripsi" translatable="false">Description</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
</resources>
