<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="25dp"
    android:useDefaultMargins="true">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:padding="25dp"
        android:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:layout_columnWeight="1"
            android:layout_marginEnd="1dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padd_edittext"
                android:drawableTop="@drawable/ic_qr_code_svgrepo_com"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/start_transaction" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padd_edittext"
                android:drawableTop="@drawable/ic_user_svgrepo_com"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/your_account" />
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:src="@drawable/ic_letter_svgrepo_com"
        android:tooltipText="@string/contact_us" />
</RelativeLayout>
